--- a/css/style.css
+++ b/css/style.css
@@ -12,15 +12,17 @@
 .main-color-bg {
     background-color: var(--main-color) !important;
 }
+
 .secondary-color-bg {
     background-color: var(--secondary-color) !important;
 }
 
 /* nav */
-.navbar-brand h1{
+.navbar-brand h1 {
     font-size: 1rem;
 }
-.navbar-brand p{
+
+.navbar-brand p {
     font-size: .60rem;
     color: rgb(155, 155, 155);
 }
@@ -51,5 +53,29 @@
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(3.6px);
     -webkit-backdrop-filter: blur(3.6px);
+    color: lightgray;
 }
 
+.weather-card .card-head {
+    /* From https://css.glass */
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 12px 12px 0 0;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border: 1px solid rgba(255, 255, 255, 0.1);
+}
+.weather-card p {
+   margin: 0;
+}
+.weather-card .condition {
+   color: lightblue;
+}
+.weather-card .temp p{
+   font-size: 90px;
+   font-weight: 700;
+   line-height: 135px;
+   color: white;
+}
+
+/* row weather-cards */
