--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,6 @@
     background-image: url(../imgs/banner.png);
     background-position: center;
     background-repeat: no-repeat;
-    /* background-size: cover; */
 }
 
 .weather-screen .form-control:focus {
@@ -46,6 +45,7 @@
     opacity: 1;
 }
 
+/* weather card */
 .weather-card {
     /* From https://css.glass */
     background: rgba(255, 255, 255, 0.04);
@@ -65,17 +65,24 @@
     -webkit-backdrop-filter: blur(5px);
     border: 1px solid rgba(255, 255, 255, 0.1);
 }
+
 .weather-card p {
-   margin: 0;
-}
-.weather-card .condition {
-   color: lightblue;
-}
-.weather-card .temp p{
-   font-size: 90px;
-   font-weight: 700;
-   line-height: 135px;
-   color: white;
+    margin: 0;
 }
 
-/* row weather-cards */
+.weather-card .condition {
+    color: rgb(0, 191, 255);
+}
+
+.weather-card .temp p {
+    font-size: 80px;
+    font-weight: 700;
+    line-height: 135px;
+    color: white;
+}
+
+.direction p .wind p .rain p {
+    font-size: 4px !important;
+
+}
+
